some alignment fixes
footer
contact and booking page headers

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -158,7 +158,9 @@ footer {
     border-radius: 50%;
     position: absolute;
     bottom: -650px;
-    left: -800px;
+    //left: -800px;
+    left: 50%;
+    margin-left: -85%;
     z-index: -100;
   }
   small {
@@ -341,7 +343,8 @@ footer {
   border-radius: 50%;
   position: absolute;
   top: -70vh;
-  right: -80vh;
+  right: 50%;
+  margin-right: -85%;
   z-index: -100;
   //set background image for oval based on page
 }
@@ -650,7 +653,8 @@ footer {
     //position: absolute;
     //top: -70vh;
     top: -230px;
-    right: -500px;
+    //right: 50%;
+    //margin-right: -85%;
     //right: -80vh;
     //z-index: -100;
     //set background image for oval based on page
@@ -735,7 +739,7 @@ footer {
       //bottom: -650px;
       //left: -800px;
       height: 700px;
-      left: -50%; bottom: -450px;
+      bottom: -450px;
     }
     small {
       //font-size: 1.5em;
@@ -1062,7 +1066,8 @@ footer {
   .pageOval {
     height: 500px;
     top: -230px;
-    right: -300px;
+    //right: -300px;
+    //set margin-right based on width
     //set background image for oval based on page
   }
   .pageTitle {
@@ -1158,7 +1163,7 @@ footer {
     }
     .footerOval {
       height: 700px;
-      left: -35%; bottom: -500px;
+      bottom: -500px;
     }
     small {
       font-size: 2em;
@@ -1479,7 +1484,7 @@ footer {
       }
       .footerOval {
         height: 250px;
-        left: -35%; bottom: -100px;
+        bottom: -100px;
       }
       small {
         font-size: 2em;
@@ -1623,7 +1628,6 @@ footer {
     }
 
   /*** Contact page ***/
-  /*** Contact page ***/
   #contactForm {
     width: 100%;
     h3 {
@@ -1762,30 +1766,4 @@ footer {
     width: 90%;
   }
 
-}
-
-/*** extra media query fixes (in between sizes) ***/
-//homepage photo title fix
-//i plan on removing these soon
-//I'm going to change some styles so that these are not necessary
-@media only screen and (max-width: 1217px) and (min-width: 825px) {
-  #photos {
-    //margin-top: 190px;
-    #bgPlant {
-      //width: 600px;
-      //top: 13%;
-      //top: 450px;
-      //left: -120px;
-    }
-  }
-}
-@media only screen and (max-width: 1005px) and (min-width: 825px) {
-  #photos {
-    //margin-top: 215px;
-    #bgPlant {
-      //width: 600px;
-      //top: 14%;
-      //left: -120px;
-    }
-  }
 }
